--- a/src/test/resources/languages/en.json
+++ b/src/test/resources/languages/en.json
@@ -1,7 +1,7 @@
 {
   "locator": {
     "acceptButton": "//div[@id='popup-dialog-description']//following-sibling::div/button",
-    "iframe": "#preview-notification-frame",
+    "iframe": "preview-notification-frame",
     "returnRadios": "//div[@role='radiogroup']//input[@value='roundTrip']",
     "onewayRadios": "//div[@role='radiogroup']//input[@value='oneway']",
     "fromInputs": "//label[contains(text(),'From')]/following-sibling::div//input",
