Handle multi languages

--- a/src/test/resources/languages/vi.json
+++ b/src/test/resources/languages/vi.json
@@ -1,12 +1,9 @@
 {
   "locator": {
-    "acceptButton": "//div[@id='popup-dialog-description']//following-sibling::div/button_1",
-    "iframe": "#preview-notification-frame",
-    "returnRadios": "//div[@role='radiogroup']//input[@value='roundTrip']",
-    "onewayRadios": "//div[@role='radiogroup']//input[@value='oneway']",
-    "fromInputs": "//label[contains(text(),'From')]/following-sibling::div//input",
-    "toInputs": "//input[@id='arrivalPlaceDesktop']"
   },
   "content": {
+    "from": "Điểm khởi hành",
+    "departureDate": "Ngày đi",
+    "returnDate": "Ngày về"
   }
 }
