Refactor code and support get data

--- a/src/test/resources/languages/en.json
+++ b/src/test/resources/languages/en.json
@@ -9,6 +9,7 @@
     "returnDate": "Return Date",
     "adult": "Adults",
     "children":"Childrens",
-    "infant": "Infants"
+    "infant": "Infants",
+    "sold.out": "Sold out"
   }
 }
