--- a/src/test/resources/languages/ko.json
+++ b/src/test/resources/languages/ko.json
@@ -9,6 +9,7 @@
     "returnDate": "오는날",
     "adult": "성인",
     "children":"소아",
-    "infant": "유아"
+    "infant": "유아",
+    "sold.out": "Sold out"
   }
 }
