--- a/src/test/resources/languages/vi.json
+++ b/src/test/resources/languages/vi.json
@@ -9,6 +9,7 @@
     "returnDate": "Ngày về",
     "adult": "Người lớn",
     "children":"Trẻ em",
-    "infant": "Em bé"
+    "infant": "Em bé",
+    "sold.out": "Hết chỗ"
   }
 }
