--- a/src/test/resources/languages/vi.json
+++ b/src/test/resources/languages/vi.json
@@ -10,6 +10,7 @@
     "adult": "Người lớn",
     "children":"Trẻ em",
     "infant": "Em bé",
-    "sold.out": "Hết chỗ"
+    "sold.out": "Hết chỗ",
+    "time.to.time": " Đến "
   }
 }
