--- a/src/test/resources/languages/ko.json
+++ b/src/test/resources/languages/ko.json
@@ -1,5 +1,7 @@
 {
-  "locator": {
+  "location": {
+    "ho.chi.minh": "호치민 시",
+    "ha.noi": "하노이 시"
   },
   "content": {
     "oneway": "편도",
@@ -8,9 +10,11 @@
     "departureDate": "가는날",
     "returnDate": "오는날",
     "adult": "성인",
-    "children":"소아",
+    "children": "소아",
     "infant": "유아",
     "sold.out": "Sold out",
-    "time.to.time": " 부터 "
+    "time.to.time": " 부터 ",
+    "search.button": "항공편 조회",
+    "continue.button": "계속"
   }
 }
