--- a/src/test/resources/languages/en.json
+++ b/src/test/resources/languages/en.json
@@ -15,6 +15,8 @@
     "sold.out": "Sold out",
     "time.to.time": " To ",
     "search.button": "Let's go",
-    "continue.button": "Continue"
+    "continue.button": "Continue",
+    "departure.flight": "Departure flight",
+    "return.flight": "Return flight"
   }
 }
